# courses_work3

./: README.md  pyproject.toml
courses_work3/src/: classes.py  main.py  operations.json  utils.py
courses_work3/tests/: test_utils.py
