[tool.poetry]
name = "courses-work3"
version = "0.1.0"
description = ""
authors = ["Artem Shmoylov <artemshmoylov123@gmail.com>"]
readme = "README.md"
packages = [{include = "courses_work3"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
